--- a/inapptoss/app/assets/index.html
+++ b/inapptoss/app/assets/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InAppToss Game</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <!-- CORRECTED PATH -->
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 <div id="game-container">
@@ -19,6 +20,7 @@
 
     <!-- 퍼즐 UI (숨김) -->
     <div id="puzzle-ui" class="hidden">
+        <!-- CORRECTED PATH -->
         <iframe src="puzzles/puzzle1.html"></iframe>
         <button id="close-puzzle">닫기</button>
     </div>
@@ -31,10 +33,11 @@
 
 </div>
 
+<!-- CORRECTED PATHS -->
 <script src="js/gameManager.js"></script>
 <script src="js/mapManager.js"></script>
 <script src="js/puzzleManager.js"></script>
 <script src="js/uiManager.js"></script>
-<script src="./js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
